2014-04-01  Brent Fulgham  <bfulgham@apple.com>

        Unreviewed test gardening.

        * Scripts/webkitpy/port/base_unittest.py:
        (PortTest.test_build_path): Handle the Debug case so we don't get webkitpy-test failures on our test bots.

2014-04-01  Zoltan Horvath  <zoltan@webkit.org>

        [CSS Exclusions] Remove exclusions parsing support
        https://bugs.webkit.org/show_bug.cgi?id=131046

        Reviewed by David Hyatt.

        * Scripts/webkitperl/FeatureList.pm:

2014-04-01  Manuel Rego Casasnovas  <rego@igalia.com>

        [GTK] Remove last reference to GTK+ WK1 EWS
        https://bugs.webkit.org/show_bug.cgi?id=131058

        Reviewed by Martin Robinson.

        In r166427 WK1 GTK+ bots and EWS where removed, but this file was missing.

        * QueueStatusServer/config/queues.py: Remove reference to GTK+ WK1 EWS.

2014-04-01  Lucas Forschler  <lforschler@apple.com>

        Add a 32bit JSC builder/tester.
        https://bugs.webkit.org/show_bug.cgi?id=131054
        
        Reviewed by Michael Saboff.

        * BuildSlaveSupport/build.webkit.org-config/config.json:
        * BuildSlaveSupport/build.webkit.org-config/master.cfg:
        (Compile32bitJSC):
        (Run32bitJSCTests):
        (Run32bitJSCTests.countFailures):
        (BuildAndTest32bitJSCFactory):
        (BuildAndTest32bitJSCFactory.__init__):

2014-04-01  Martin Robinson  <mrobinson@igalia.com>

        [GTK] No longer build WebKit1 gtkdoc
        https://bugs.webkit.org/show_bug.cgi?id=130970

        Reviewed by Anders Carlsson.

        * gtk/common.py:
        (gtk_version_of_pkg_config_file): Deleted.
        * gtk/generate-gtkdoc:
        (get_gtkdoc_module_paths): We no longer need to worry about GTK+ 2, since it
        was only applicable for WebKit1.
        (get_generator_for_config): No longer look for the WebKit1 configuration file.

2014-04-01  Mario Sanchez Prada  <mario.prada@samsung.com>
